# NRP_VC_addon

./: .gitignore  CMAES_Visualization.ipynb  README.md
.ipynb_checkpoints/: CMAES_Runner-checkpoint.ipynb
data/FFT/: circle_f=0.125_periods=100.pkl  circle_f=0.25_periods=100.pkl  circle_f=0.5_periods=100.pkl  circle_f=1_periods=100.pkl  longitudinal_f=0.125_periods=100.pkl  longitudinal_f=0.25_periods=100.pkl  longitudinal_f=0.5_periods=100.pkl  longitudinal_f=1_periods=100.pkl  transversal_f=0.125_periods=100.pkl  transversal_f=0.25_periods=100.pkl  transversal_f=0.5_periods=100.pkl  transversal_f=1_periods=100.pkl
data/Mouse_Experiment/templates/: FRC_CPG_brain.py  bibi_configuration.bibi  experiment_configuration.exc  model.sdf
data/Tigrillo/templates/: CPG_brain.py  experiment_configuration.exc
package/: LICENSE  README.md  pyproject.toml
package/src/NRP_VC_addon/: CMAES_Runner.py  NRP_Simulator.py  debug.py
package/src/NRP_VC_addon/experiments/: Experiment.py
package/src/NRP_VC_addon/experiments/Mouse_Experiment/: Mouse_Experiment.py  Mouse_Experiment_CMAES.py  Mouse_Experiment_FORCE.py  Mouse_Experiment_FORCE_Interpolate.py  Mouse_Experiment_GT_Generation.py
package/src/NRP_VC_addon/experiments/Tigrillo/: Tigrillo.py
